# URLShortener

./: .gitignore  README.md  app.py  constants.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  wsgi.py
database/: database.db
templates/: base.html  index.html  link_stats.html  new_link.html
